--- a/cep.html
+++ b/cep.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Consulta de CNPJ • TPG Online</title>
-  <meta name="description" content="Consulta de CNPJ • TPG Online">
+  <title>Consulta de CEP • TPG Online</title>
+  <meta name="description" content="Consulta de CEP • TPG Online">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
-  <link rel="stylesheet" href="assets/css/cnpj.css">
+  <link rel="stylesheet" href="assets/css/cep.css">
 </head>
 <body>
 
@@ -21,8 +21,8 @@
     <div class="collapse navbar-collapse" id="mainNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-        <li class="nav-item"><a class="nav-link active" href="cnpj.html">Consultar CNPJ</a></li>
-        <li class="nav-item"><a class="nav-link" href="cep.html">Consultar CEP</a></li>
+        <li class="nav-item"><a class="nav-link" href="cnpj.html">Consultar CNPJ</a></li>
+        <li class="nav-item"><a class="nav-link active" href="cep.html">Consultar CEP</a></li>
         <li class="nav-item"><a class="nav-link" href="ncm.html">Consultar NCM</a></li>
         <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
       </ul>
@@ -32,17 +32,17 @@
 
 <main class="section">
   <div class="container container-narrow">
-    <h1 class="h3 fw-bold mb-3">Consulta de CNPJ</h1>
+    <h1 class="h3 fw-bold mb-3">Consulta de CEP</h1>
 
     <!-- Fonte da API / Transparência -->
     <div class="alert alert-secondary small bg-transparent border rounded-3 px-3 py-3 mb-3">
       <div class="d-flex align-items-start gap-2">
         <span class="badge bg-info text-dark">Fonte</span>
         <div>
-          <strong>Dados de CNPJ via BrasilAPI</strong> — serviço público e gratuito mantido pela comunidade.
+          <strong>Dados de CEP via BrasilAPI</strong> — serviço público e gratuito.
           Endpoint consultado:
-          <code>https://brasilapi.com.br/api/cnpj/v1/&lt;cnpj&gt;</code>.
-          <div class="note mt-2">Obs.: Nem sempre todas as informações cadastrais estarão disponíveis.</div>
+          <code>https://brasilapi.com.br/api/cep/v1/&lt;cep&gt;</code>.
+          <div class="note mt-2">Obs.: se o CEP não existir, a consulta retornará erro.</div>
         </div>
       </div>
     </div>
@@ -50,41 +50,38 @@
     <!-- Guia rápido -->
     <p class="small text-muted mb-2">
       <a class="link-light link-underline-opacity-0 fw-semibold"
-         data-bs-toggle="collapse" href="#cnpjHelp" role="button"
-         aria-expanded="false" aria-controls="cnpjHelp">
+         data-bs-toggle="collapse" href="#cepHelp" role="button"
+         aria-expanded="false" aria-controls="cepHelp">
         👉 Clique aqui para ver como interpretar os campos desta consulta
       </a>
     </p>
-    <div class="collapse mb-3" id="cnpjHelp">
+    <div class="collapse mb-3" id="cepHelp">
       <div class="card card-body bg-surface text-light small">
         <ul class="mb-0">
-          <li><strong>CNPJ</strong>: número de 14 dígitos, com validação local.</li>
-          <li><strong>Razão Social / Nome Fantasia</strong>: identificação oficial e nome comercial.</li>
-          <li><strong>Natureza Jurídica</strong>: forma legal da empresa.</li>
-          <li><strong>Situação / Abertura</strong>: status cadastral e data de início de atividade.</li>
-          <li><strong>Capital Social</strong>: valor registrado no contrato social.</li>
-          <li><strong>CNAE</strong>: atividade econômica principal e secundárias.</li>
-          <li><strong>Endereço</strong>: logradouro, bairro, município, UF e CEP.</li>
-          <li><strong>Quadro Societário</strong>: sócios e qualificações.</li>
+          <li><strong>Rua</strong>: logradouro (quando cadastrado).</li>
+          <li><strong>Bairro</strong>: bairro correspondente.</li>
+          <li><strong>Cidade / UF</strong>: município e estado.</li>
+          <li><strong>CEP</strong>: número formatado como 00000-000.</li>
         </ul>
       </div>
     </div>
 
     <!-- Formulário -->
-    <form id="cnpj-form" class="row g-3 query-form align-items-end" novalidate>
+    <form id="cep-form" class="row g-3 query-form" novalidate>
       <div class="col-12">
-        <label for="cnpj" class="form-label">Digite o CNPJ</label>
+        <label for="cep" class="form-label">Digite o CEP</label>
         <div class="input-group input-group-lg">
-          <span class="input-group-text">CNPJ</span>
-          <input id="cnpj" type="text" class="form-control form-control-lg" inputmode="numeric"
-                 placeholder="00.000.000/0000-00" maxlength="18" required>
+          <span class="input-group-text">CEP</span>
+          <input id="cep" type="text" class="form-control form-control-lg" inputmode="numeric"
+                 placeholder="00000-000" maxlength="9" required>
         </div>
-        <div class="form-text text-muted-2">Aceita com ou sem pontuação. Validamos os dígitos localmente.</div>
+        <div class="form-text text-muted-2">Aceita com ou sem hífen. Formatamos automaticamente.</div>
       </div>
+
+      <!-- Botão embaixo, largura total -->
       <div class="col-12">
         <button class="btn btn-primary btn-lg w-100 mt-2" type="submit">Consultar</button>
       </div>
-      
     </form>
 
     <div id="status" class="mt-3" aria-live="polite"></div>
@@ -97,6 +94,6 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script src="assets/js/cnpj.js" defer></script>
+<script src="assets/js/cep.js" defer></script>
 </body>
 </html>
