--- a/index.html
+++ b/index.html
@@ -4,125 +4,109 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>TPG Online</title>
-  <meta name="description" content="Soluções web simples, responsivas e funcionais.">
+  <meta name="description" content="TPG Online">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
+  <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark tpg sticky-top">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">TPG<span>Online</span></a>
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Alternar navegação">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav ms-auto align-items-lg-center">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Início</a></li>
-          <li class="nav-item"><a class="nav-link" href="cnpj.html">Consultar CNPJ</a></li>
-          <li class="nav-item" data-nav-admin><a class="nav-link" href="#" onclick="alert('Área restrita de Usuários');return false;">Usuários</a></li>
-          <li class="nav-item dropdown ms-lg-2">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Conta (<span id="current-user-label">convidado</span>)
-            </a>
-            <div class="dropdown-menu dropdown-menu-end p-3" style="min-width:260px">
-              <form id="set-user-form" class="d-grid gap-2">
-                <label for="userNameInput" class="form-label">Definir usuário (demo)</label>
-                <input id="userNameInput" class="form-control form-control-sm" placeholder="Ex.: admin">
-                <button class="btn btn-primary btn-sm" type="submit">Salvar & atualizar</button>
-                <div class="form-text">Dica: use <strong>admin</strong> para ver o menu Usuários.</div>
-              </form>
-            </div>
-          </li>
-        </ul>
-      </div>
+  
+<!-- Navbar inline -->
+<nav class="navbar navbar-expand-lg navbar-dark tpg sticky-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">TPG<span>Online</span></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="mainNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link active" href="index.html">Início</a></li>
+        <li class="nav-item"><a class="nav-link " href="cnpj.html">Consultar CNPJ</a></li>
+        <li class="nav-item"><a class="nav-link "  href="cep.html">Consultar CEP</a></li>
+        <li class="nav-item"><a class="nav-link "  href="ncm.html">Consultar NCM</a></li>
+        <li class="nav-item"><a class="nav-link " href="login.html">Login</a></li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
-  <!-- Hero -->
-  <header class="hero section">
-    <div class="container">
-      <div class="row align-items-center g-4">
-        <div class="col-12 col-lg-6">
-          <h1 class="display-5 fw-bold">TPG Online</h1>
-          <p class="lead">Soluções web simples e funcionais. Base sólida em Bootstrap 5, com tema escuro e performance.</p>
-          <div class="d-flex gap-2 flex-wrap">
-            <a class="btn btn-primary btn-lg" href="cnpj.html">Consultar CNPJ</a>
-            <a class="btn btn-outline-light btn-lg" href="#features">Ver recursos</a>
-          </div>
-        </div>
-        <div class="col-12 col-lg-6 text-center">
-          <img src="assets/img/hero.svg" class="hero-illus" alt="Ilustração">
+  
+<header class="hero section">
+  <div class="container">
+    <div class="row align-items-center g-4">
+      <div class="col-12 col-lg-6">
+        <h1 class="display-5 fw-bold">TPG Online</h1>
+        <p class="lead">Soluções web simples e funcionais. Base sólida em Bootstrap 5 com tema escuro.</p>
+        <div class="d-flex gap-2 flex-wrap">
+          <a class="btn btn-primary btn-lg" href="cnpj.html">Consultar CNPJ</a>
+          <a class="btn btn-outline-light btn-lg" href="cep.html">Consultar CEP</a>
+          <a class="btn btn-outline-light btn-lg" href="ncm.html">Consultar NCM</a>
         </div>
       </div>
+      <div class="col-12 col-lg-6 text-center">
+        <img src="assets/img/hero.png" class="hero-illus" alt="Ilustração">
+      </div>
     </div>
-  </header>
+  </div>
+</header>
 
-  <!-- Features -->
-  <section id="features" class="section">
-    <div class="container">
-      <div class="row g-3">
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="card border-0 round-xl shadow-soft feature-card">
-            <div class="card-body">
-              <h5 class="card-title">Responsivo</h5>
-              <p class="card-text text-muted-2">Layout fluido para celular, tablet e desktop.</p>
-            </div>
-            <div class="card-footer bg-transparent border-0">
-              <span class="btn btn-outline-primary w-100 disabled">Pronto</span>
-            </div>
+<section id="features" class="section">
+  <div class="container">
+    <div class="row g-3">
+      <div class="col-12 col-sm-6 col-lg-3">
+        <div class="card border-0 round-xl shadow-soft feature-card">
+          <div class="card-body">
+            <h5 class="card-title">Responsivo</h5>
+            <p class="card-text text-muted-2">Layout fluido para celular, tablet e desktop.</p>
+          </div>
+          <div class="card-footer bg-transparent border-0">
+            <span class="btn btn-outline-primary w-100 disabled">Pronto</span>
           </div>
         </div>
-
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="card border-0 round-xl shadow-soft feature-card">
-            <div class="card-body">
-              <h5 class="card-title">Rápido</h5>
-              <p class="card-text text-muted-2">HTML/CSS/JS diretos, sem dependências pesadas.</p>
-            </div>
-            <div class="card-footer bg-transparent border-0">
-              <span class="btn btn-outline-primary w-100 disabled">Pronto</span>
-            </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <div class="card border-0 round-xl shadow-soft feature-card">
+          <div class="card-body">
+            <h5 class="card-title">Rápido</h5>
+            <p class="card-text text-muted-2">HTML/CSS/JS diretos, sem dependências pesadas.</p>
+          </div>
+          <div class="card-footer bg-transparent border-0">
+            <span class="btn btn-outline-primary w-100 disabled">Pronto</span>
           </div>
         </div>
-
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="card border-0 round-xl shadow-soft feature-card">
-            <div class="card-body">
-              <h5 class="card-title">Seguro</h5>
-              <p class="card-text text-muted-2">Sem eval/inline; limpeza de dados nas consultas.</p>
-            </div>
-            <div class="card-footer bg-transparent border-0">
-              <span class="btn btn-outline-primary w-100 disabled">Pronto</span>
-            </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <div class="card border-0 round-xl shadow-soft feature-card">
+          <div class="card-body">
+            <h5 class="card-title">Seguro</h5>
+            <p class="card-text text-muted-2">Sem eval/inline; limpeza de dados nas consultas.</p>
+          </div>
+          <div class="card-footer bg-transparent border-0">
+            <span class="btn btn-outline-primary w-100 disabled">Pronto</span>
           </div>
         </div>
-
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="card border-0 round-xl shadow-soft feature-card">
-            <div class="card-body">
-              <h5 class="card-title">Conversor</h5>
-              <p class="card-text text-muted-2">Ferramenta extra para breve.</p>
-            </div>
-            <div class="card-footer bg-transparent border-0">
-              <span class="btn btn-outline-primary w-100 disabled">Em breve</span>
-            </div>
+      </div>
+      <div class="col-12 col-sm-6 col-lg-3">
+        <div class="card border-0 round-xl shadow-soft feature-card">
+          <div class="card-body">
+            <h5 class="card-title">Conversor</h5>
+            <p class="card-text text-muted-2">Ferramenta extra para breve.</p>
+          </div>
+          <div class="card-footer bg-transparent border-0">
+            <span class="btn btn-outline-primary w-100 disabled">Em breve</span>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- Footer -->
   <footer class="site-footer py-4">
     <div class="container text-center small">
-      © <span id="year"></span> TPG Online. Todos os direitos reservados.
+      © <span id="year"></span> TPG Online.
     </div>
   </footer>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-  <script src="assets/js/app.js" defer></script>
+  <script>document.getElementById("year").textContent=new Date().getFullYear();</script>
 </body>
 </html>
