--- a/resultado.html
+++ b/resultado.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pagamento - Teste de QI</title>
-  <link rel="stylesheet" href="../assets/css/qi.css">
+  <link rel="stylesheet" href="assets/css/qi.css">
   <script src="https://sdk.mercadopago.com/js/v2"></script>
 </head>
 <body>
   <div class="container">
     <h2>Seu resultado está pronto! 💡</h2>
     <p>Para liberar o certificado, realize o pagamento simbólico de <b>R$ 3,99</b>.</p>
-    <button id="btnPagar" class="btn-pagar">Pagar com Mercado Pago</button>
+    <button id="btnPagar" class="btn">Pagar com Mercado Pago</button>
   </div>
-  <script src="../assets/js/pagamento.js"></script>
+  <script src="assets/js/pagamento.js"></script>
 </body>
 </html>
