--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TPG Online</title>
+  <title>Inicio • TPG Online</title>
   <meta name="description" content="TPG Online">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
@@ -71,6 +71,7 @@ document.addEventListener("DOMContentLoaded", () => {
         <li class="nav-item"><a class="nav-link "  href="ncm.html">Consultar NCM</a></li>
         <li class="nav-item"><a class="nav-link "  href="fipe.html">Consultar FIPE</a></li>
         <li class="nav-item"><a class="nav-link " href="qrcode.html">Gerar QR Code</a></li>
+        <li class="nav-item"><a class="nav-link " href="pagamento.html">Pagamento</a></li>
         <li class="nav-item"><a class="nav-link " href="https://f4e38d4c63c0.ngrok-free.app/ngl/frontend/login.html">Login</a></li>
       </ul>
     </div>
