--- a/main.html
+++ b/main.html
@@ -22,18 +22,29 @@
   </script>
 
   <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-W2LG2C7K');</script>
+  <script>
+    (function(w,d,s,l,i){
+      w[l]=w[l]||[];
+      w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});
+      var f=d.getElementsByTagName(s)[0],
+          j=d.createElement(s),
+          dl=l!='dataLayer'?'&l='+l:'';
+      j.async=true;
+      j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
+      f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-W2LG2C7K');
+  </script>
   <!-- End Google Tag Manager -->
 </head>
 
 <body>
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2LG2C7K"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2LG2C7K"
+            height="0" width="0"
+            style="display:none;visibility:hidden">
+    </iframe>
+  </noscript>
   <!-- End Google Tag Manager (noscript) -->
 
   <!-- ====== INCLUDES (carregados pelo assets/js/includes.js) ====== -->
@@ -46,15 +57,23 @@
     <div class="container">
       <div class="row align-items-center g-4">
         <div class="col-12 col-lg-7">
-          <h1 class="display-5 fw-bold">Bem-vindo à sua área TPG Online</h1>
+          <h1 class="display-5 fw-bold">
+            Bem-vindo à sua área TPG Online
+          </h1>
           <p class="lead text-muted">
             Aqui você encontra, em um só lugar, as principais ferramentas que já usa no TPG Online.
+          </p>
+          <p class="text-muted mb-0 small">
+            Acesse as consultas, utilitários e recursos que facilitam seu dia a dia — tudo de graça.
           </p>
         </div>
         <div class="col-12 col-lg-5 text-lg-end text-center">
           <p class="text-info mb-1 small">Dica</p>
+          <p class="text-muted mb-2">
+            Clique no seu nome na barra superior para voltar a esta página quando quiser.
+          </p>
           <p class="text-muted mb-0">
-            Use os atalhos abaixo para acelerar seu dia a dia.
+            Use os atalhos abaixo para acelerar seu fluxo de trabalho.
           </p>
         </div>
       </div>
@@ -66,10 +85,11 @@
     <div class="container">
       <h2 class="text-info fw-bold mb-4 text-center">Atalhos rápidos ⚡</h2>
       <p class="text-muted mb-5 text-center">
-        Acesse diretamente as ferramentas mais utilizadas.
+        Acesse diretamente as ferramentas mais utilizadas do TPG Online.
       </p>
 
       <div class="main-grid">
+        <!-- CNPJ -->
         <a href="cnpj.html" class="main-card">
           <div>
             <h5>Consultar CNPJ</h5>
@@ -78,6 +98,7 @@
           <span class="main-card-tag">Documentos</span>
         </a>
 
+        <!-- CEP -->
         <a href="cep.html" class="main-card">
           <div>
             <h5>Consultar CEP</h5>
@@ -86,14 +107,16 @@
           <span class="main-card-tag">Endereços</span>
         </a>
 
+        <!-- NCM -->
         <a href="ncm.html" class="main-card">
           <div>
             <h5>Consultar NCM</h5>
-            <p>Classificação fiscal de produtos em poucos cliques.</p>
+            <p>Confira a classificação fiscal de produtos em poucos cliques.</p>
           </div>
           <span class="main-card-tag">Fiscal</span>
         </a>
 
+        <!-- FIPE -->
         <a href="fipe.html" class="main-card">
           <div>
             <h5>Tabela FIPE</h5>
@@ -102,6 +125,7 @@
           <span class="main-card-tag">Veículos</span>
         </a>
 
+        <!-- QR Code -->
         <a href="qrcode.html" class="main-card">
           <div>
             <h5>Gerar QR Code</h5>
@@ -110,6 +134,7 @@
           <span class="main-card-tag">Utilitários</span>
         </a>
 
+        <!-- IMC -->
         <a href="calculadora-imc.html" class="main-card">
           <div>
             <h5>Calculadora IMC</h5>
@@ -118,6 +143,7 @@
           <span class="main-card-tag">Saúde</span>
         </a>
 
+        <!-- Colaborar -->
         <a href="colaborar.html" class="main-card">
           <div>
             <h5>Colaborar com o TPG Online</h5>
@@ -126,19 +152,27 @@
           <span class="main-card-tag">Comunidade</span>
         </a>
       </div>
+
+      <!-- Sessão de "Em breve" -->
+      <div class="mt-5 text-center">
+        <h3 class="h5 text-info fw-bold mb-3">Em breve 🚀</h3>
+        <p class="text-muted mb-2">
+          Novas ferramentas de finanças, produtividade e estudo serão adicionadas aqui.
+        </p>
+        <p class="text-muted mb-0 small">
+          Tem alguma ideia? Use o atalho <strong>“Colaborar com o TPG Online”</strong> para mandar sua sugestão.
+        </p>
+      </div>
     </div>
   </section>
 
   <!-- Rodapé (include) -->
   <div data-include="/assets/partials/footer.html"></div>
 
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script src="assets/js/check-session.js" defer></script>
   <script src="assets/js/includes.js" defer></script>
   <script src="assets/js/auth-guard.js" defer></script>
-  
-  
-
-
 </body>
 </html>
